--- a/style.css
+++ b/style.css
@@ -13,6 +13,10 @@ ul {
   list-style: none;
 }
 
+a {
+  text-decoration: none;
+}
+
 /*Fonts*/
 h1, 
 h2,
@@ -77,6 +81,122 @@ ul li {
 
 li .details {
   max-width: 240px;
+}
+
+.details h3 {
+  margin-bottom: 8px;
+  font-size: 16px;
+  line-height: 19px;
+}
+
+.details p {
+  color: rgba(0, 0, 0, 0.6);
+  font-size: 14px;
+  line-height: 21px;
+}
+
+/*Contact*/
+
+.button {
+  background-color: #995000;
+  color: #fed7aa;
+  height: 3.5rem;
+  display: inline-flex;
+  align-items: center;
+  padding: 8px 16px;
+  border-radius: 0.25rem;
+  transition: background 0.5s;
+}
+
+.button:hover {
+  background: #fed7aa;
+}
+
+#contact .grid {
+  gap: 4rem;
+}
+
+#contact .text p {
+  margin-bottom: 2rem;
+}
+
+#contact .button i{
+  font-size: 1.5rem;
+  margin-right: 0.625rem;
+
+  color:  white;
+}
+
+
+
+/*Footer*/
+footer {
+  background:  #995000;
+}
+
+footer .logo {
+  display: inline-block;
+  margin-bottom: 1.5rem;
+}
+
+footer.section {
+  padding: 4rem 0;
+}
+
+footer .brand p {
+  color: #fed7aa;
+  margin-bottom: 0.75rem;
+}
+
+footer i {
+  font-size: 1.5rem;
+  color: white;
+}
+
+footer .social a {
+  margin-right: 2rem;
+  transition: 0.3s;
+  display: inline-block;
+}
+
+footer .social a:hover {
+  transform: translateY(-8px);
+}
+
+footer a h3 span {
+  color: #fed7aa;
+}
+
+footer a h3 {
+  font-size: 14px;
+}
+
+/*Back to top*/
+.back-to-top {
+  background: #995000;
+  color: white;
+
+  position: fixed;
+  right: 1rem;
+  bottom: 1rem;
+
+  padding: 0.5rem;
+  clip-path: circle();
+
+  font-size: 1.5rem;
+  line-height: 0;
+
+  visibility: hidden;
+  opacity: 0;
+
+  transition: 0.3s;
+  transform: translateY(100%);
+}
+
+.back-to-top.show {
+  visibility: visible;
+  opacity: 1;
+  transform: translateY(0);
 }
 
 .details h3 {
